Set up Mac packaging; switched to JDK 14 for jpackage
Windows still needs to be tested.